--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>
-        Tres Empanadas Restaurant
+        <%= title%>
     </title>
-<script defer src="bundle.js"></script></head>
+</head>
 
 <body>
 </body>
