--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="../src/style.css">
-    <title>Tres Empanadas</title>
-</head>
+    <title>
+        Tres Empanadas Restaurant
+    </title>
+<script defer src="bundle.js"></script></head>
 
 <body>
-    <script src="bundle.js"></script>
 </body>
 
 </html>
